Add link to 201502.html

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 <h3>
 <a id="february-2015" class="anchor" href="#february-2015" aria-hidden="true"><span class="octicon octicon-link"></span></a>February 2015</h3>
 
+<a href="201502.html">Meetup notes for February 2015</a>
+
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
