Update title etc

--- a/201502.html
+++ b/201502.html
@@ -1,10 +1,8 @@
-<!DOCTYPE NETSCAPE-Bookmark-file-1>
-<!-- This is an automatically generated file.
-     It will be read and overwritten.
-     DO NOT EDIT! -->
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
-<TITLE>Bookmarks</TITLE>
-<H1>Bookmarks</H1>
+<!DOCTYPE html>
+<head>
+  <title>OttawaJS Panel Discussion, Feb. 2015</title>
+</head>
+<H1>OttawaJS Panel Discussion, Feb. 2015</H1>
 <DL><p>
         <DT><H3 >OJS Feb 11th</H3>
         <DL><p>
