Adding css links

--- a/201502.html
+++ b/201502.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <head>
-  <title>OttawaJS Panel Discussion, Feb. 2015</title>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <title>OttawaJS Panel Discussion, Feb. 2015</title>
 </head>
+<body>
 <H1>OttawaJS Panel Discussion, Feb. 2015</H1>
 <DL><p>
         <DT><H3 >OJS Feb 11th</H3>
@@ -83,3 +93,4 @@
             <DT><A HREF="http://stackoverflow.com/" >Stack Overflow</A>
         </DL><p>
 </DL><p>
+</body>
