Add container divs for formatting

--- a/201502.html
+++ b/201502.html
@@ -12,8 +12,10 @@
     <title>OttawaJS Panel Discussion, Feb. 2015</title>
 </head>
 <body>
-<H1>OttawaJS Panel Discussion, Feb. 2015</H1>
-<DL><p>
+    <div id="container">
+      <div class="inner">
+        <H1>OttawaJS Panel Discussion, Feb. 2015</H1>
+        <DL><p>
         <DT><H3 >OJS Feb 11th</H3>
         <DL><p>
             <DT><A HREF="http://en.wikipedia.org/wiki/JavaScript" >JavaScript - Wikipedia, the free encyclopedia</A>
@@ -93,4 +95,6 @@
             <DT><A HREF="http://stackoverflow.com/" >Stack Overflow</A>
         </DL><p>
 </DL><p>
+        </div>
+    </div>
 </body>
