--- a/201502.html
+++ b/201502.html
@@ -14,7 +14,17 @@
 <body>
   <div id="container">
     <div class="inner">
-      <H1>OttawaJS Panel Discussion, Feb. 2015</H1>
+
+        <header>
+          <H1>OttawaJS Panel Discussion, Feb. 2015</H1>
+          <h2>Links to the resources mentioned.</h2>
+        </header>
+
+        <section id="downloads" class="clearfix">
+          <a href="https://github.com/ottawajs/notes" id="view-on-github" class="button"><span>View on GitHub</span></a>
+        </section>
+
+        <hr>
       <p>
         <H3 >Introduction - what do you work on?</H3>
         <p>
