--- a/201502.html
+++ b/201502.html
@@ -16,8 +16,8 @@
     <div class="inner">
 
         <header>
-          <H1>OttawaJS Panel Discussion, Feb. 2015</H1>
-          <h2>Links to the resources mentioned.</h2>
+          <H1>OttawaJS Panel Discussion </H1>
+          <h2>February 2015</h2>
         </header>
 
         <section id="downloads" class="clearfix">
