Provide a brief intro / overview of the discussion.

--- a/201502.html
+++ b/201502.html
@@ -23,7 +23,23 @@
         <section id="downloads" class="clearfix">
           <a href="https://github.com/ottawajs/notes" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
-
+ 
+        <p>
+        We tried something new at OttawaJS: a panel discussion of OttawaJS
+        organizers, asking them which tools they actually use and recommend to
+        others. Our goal was to help new and intermediate JavaScript developers
+        make sense of the huge number of frameworks and choices that are out
+        there. Generally, we believe "framework fatigue" is real, and at the
+        end of the day, it comes down to personal preference.
+        </p>
+        <p>
+        Some of the key suggestions were:
+        <ul>
+          <li>Start building something. Hello world. Anything.</li>
+          <li>Choose any one of the frameworks and learn it.</li>
+          <li>Get to know how frameworks really work behind the magic.</li>
+          <li>Get involved with the JS community for help and guidance.</li>
+        </p>
         <hr>
       <p>
         <H3 >Introduction - what do you work on?</H3>
