--- a/201502.html
+++ b/201502.html
@@ -25,17 +25,16 @@
         </section>
  
         <p>
-        We tried something new at OttawaJS: a panel discussion of OttawaJS
-        organizers, asking them which tools they actually use and recommend to
-        others. Our goal was to help new and intermediate JavaScript developers
-        make sense of the huge number of frameworks and choices that are out
-        there. Generally, we believe "framework fatigue" is real, and at the
-        end of the day, it comes down to personal preference.
+        We tried something new at OttawaJS: a panel discussion of OttawaJS 
+        organizers, asking which tools they use and recommend. Our goal was to
+        help new and intermediate developers make sense of the huge number of
+        choices out there. 
         </p>
         <p>
         Some of the key suggestions were:
         <ul>
           <li>Start building something. Hello world. Anything.</li>
+          <li>A lot of the choice is just personal preference.</li>
           <li>Choose any one of the frameworks and learn it.</li>
           <li>Get to know how frameworks really work behind the magic.</li>
           <li>Get involved with the JS community for help and guidance.</li>
