Include link - 2015: end of monolithic frameworks

--- a/201502.html
+++ b/201502.html
@@ -25,7 +25,7 @@
         </section>
  
         <p>
-        We tried something new at OttawaJS: a panel discussion of OttawaJS 
+        We tried something new at OttawaJS: a panel discussion of the 
         organizers, asking which tools they use and recommend. Our goal was to
         help new and intermediate developers make sense of the huge number of
         choices out there. 
@@ -90,7 +90,7 @@
         </p>
         <h3>What front-end frameworks do you use?</h3>
         <p>
-          <DT><A HREF="http://www.brandonsavage.net/why-every-developer-should-write-their-own-framework/" >&quot;Wrote my own framework&quot;</A></DT>
+          <DT>&quot;I <A HREF="https://andywalpole.me/#!/blog/142134/2015-the-end-the-monolithic-javascript-framework">wrote</A> my <A HREF="http://www.brandonsavage.net/why-every-developer-should-write-their-own-framework/">own</A> framework</A>&quot;</DT>
           <DT><A HREF="http://jquery.com/" >jQuery</A></DT>
           <DT><A HREF="http://emberjs.com/" >Ember.js (MVC)</A></DT>
           <DT><A HREF="https://angularjs.org/" >AngularJS (MVC)</A></DT>
